# monobank_api

./: .gitlab-ci.yml  Cargo.toml  README.md
.github/workflow/: actions.yaml
.github/workflows/: actions.yaml  checks.yaml  test.yaml
src/: client.rs  constants.rs  lib.rs  utils.rs
src/models/: account.rs  currency.rs  date.rs  methods.rs  mod.rs  statement.rs
src/models/account/: card.rs  card_type.rs  constants.rs  jars.rs  mod.rs
src/models/statement/: constants.rs  mod.rs
tests/: account.rs  currency.rs  statement.rs
