[package]
name = "monobank_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.9", features = ["json", "blocking"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
lazy_static = "1.4.0"
chrono = "0.4.1"
thiserror = "1.0.50"
url = "2.5.0"

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.34.0", features = ["rt", "macros"] }
